--- a/sass/style.sass
+++ b/sass/style.sass
@@ -459,7 +459,7 @@ ul
   left: 50%
   margin-left: -250px
   background: #fff
-  z-index: 1000
+  z-index: 200
 .form-heading
   text-align: center
   margin: 40px 0 50px 0
@@ -611,7 +611,7 @@ ul
 .modal-login_invited
   display: none
   height: 650px
-  top: 16vh
+  top: 8vh
 .login-invited__header
   display: flex
   flex-direction: column
@@ -688,7 +688,10 @@ ul
     justify-content: center
     align-items: center
     padding-bottom: 10px
-
+  .modal-login_invited
+    overflow: scroll
+    height: 600px   
+    top: 12vh
 @media only screen and (max-width: 768px) and (min-width: 576px)
   .header-nav
     display: none
@@ -716,7 +719,12 @@ ul
     text-align: center
 
   // modal
-
+  .login-form__signIn 
+    margin-bottom: 50px
+  .modal-login_invited
+    overflow: scroll
+    height: 600px   
+    top: 12vh
 @media only screen and (min-width: 320px) and (max-width: 576px)
   .header-nav
     display: none
@@ -792,10 +800,10 @@ ul
       margin-bottom: 20px
 
   .modal-login, .modal-login_invited
-    width: 80vw
-    margin-left: -40vw
+    width: 88vw
+    margin-left: -44vw
     overflow: scroll
-    height: 80vh
+    height: 600px
 
   .login-form__container
     width: 235px
@@ -814,3 +822,10 @@ ul
     width: 115px
     font-size: 14px
     background-position: 10px
+
+  .login-form__signIn 
+    margin-bottom: 50px
+  .modal-login_invited
+    overflow: scroll
+    height: 600px   
+    top: 12vh
